--- a/buffer_clone/package.json
+++ b/buffer_clone/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@chakra-ui/icons": "^2.0.13",
+    "@chakra-ui/nuxt": "^0.6.0",
     "@chakra-ui/react": "^2.4.3",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
