--- a/buffer_clone/package.json
+++ b/buffer_clone/package.json
@@ -8,9 +8,12 @@
     "@chakra-ui/react": "^2.4.3",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@material-ui/icons": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.61",
+    "@material-ui/utils": "^4.11.3",
     "@motionone/utils": "^10.15.1",
     "@mui/icons-material": "^5.11.0",
-    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.0",
     "@react-icons/all-files": "^4.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -24,13 +27,10 @@
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
-    "react-slick": "^0.29.0",
+    "react-ticker": "^1.3.2",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
-
-
     "styled-components": "^5.3.6",
-
     "web-vitals": "^2.1.4"
   },
   "scripts": {
