--- a/buffer_clone/package.json
+++ b/buffer_clone/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "webpack": "^4.0.0",
+    "node-sass": "^4.14.1",
     "@chakra-ui/icons": "^2.0.13",
     "@chakra-ui/nuxt": "^0.6.0",
     "@chakra-ui/react": "^2.4.3",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.61",
     "@material-ui/utils": "^4.11.3",
